--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,13 +29,21 @@ $grey-color-light: color.adjust($grey-color, $lightness: 40%);
 $grey-color-dark: #1c1c1d;
 $grey-900: #212529;
 
+$pink-color-1: #FFE0E9 !default;
+$pink-color-2: #FFC2D4 !default;
+$pink-color-3: #FF9EBB !default;
+$pink-color-4: #FF7AA2 !default;
+$pink-color-5: #E05780 !default;
+$pink-color-6: #CF0068 !default;
+$pink-color-7: #872852 !default;
+
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light: rgba($purple-color, 0.05);
-$code-bg-color-dark: #2c3237 !default;
+$code-bg-color-light: $pink-color-5;
+$code-bg-color-dark: $pink-color-7;
 
 // Font awesome location
 $fa-font-path: "../webfonts";
