change background and erase luqa

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ site.lang }}">
+<html lang="{{ site.lang }}" data-theme="light" data-theme-setting="light">
   <!-- Head -->
   <head>
     {% if page.redirect %}
